test/e2e/egress-svcref/backends-ready.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svcref-a
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svcref-b
status:
  readyReplicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: svcref-a
spec:
  (clusterIP != '' && clusterIP != 'None'): true
---
apiVersion: v1
kind: Service
metadata:
  name: svcref-b
spec:
  (clusterIP != '' && clusterIP != 'None'): true
